--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Контакты - Моя первая веб-страница</title>
+    <title>Контакт-Моя первая веб-страница</title>
 </head>
+
 <body>
     <header>
-        <a href="мой первый сайт.html">Главная</a>
+        <a href="мойпервыйсайт.html">Главная</a>
         <a href="about.html">О нас</a>
         <a href="#">Контакты</a>
     </header>
@@ -17,12 +19,13 @@
             555-55-55<br>
         </address>   
         <a href="https://www.instagram.com/gogazardiashvili/">Instagram</a><br>   
-        <phone>
+        
             +79243516050
-        </phone>  
+       
     </main>
     <footer>
             <span>&copy;&nbsp;Skillfactory</span>
     </footer>
 </body>
+
 </html>
